  copy mode.
* troff/dpost: The "\X'Sync'" escape forces dpost to write position and
  font information to the generated PostScript. This is sometimes useful
  to ensure that following "\X'PS: ...'" escapes work as expected.
* The "-mpictures" macros have been added from Plan 9 sources.
* The "picpack" preprocessor has been added.
* The file "NEWS" describes new troff language features.
* [nt]roff: The output of long names with ".pm" and stack dumps has been
  fixed.
* [nt]roff: Nested long-name string references \*[\*...] now work.
* [nt]roff: Tabulators as in ".XY\t" are now correctly handled with -x.
* A bug in the supplied realloc() replacement could result in heap
  corruption.

Release 050816
* nroff: A special terminal name, -Tlocale, has been introduced. With this
  option, UTF-8 output is generated if permitted by the current LC_CTYPE
  locale, and regular -Tlp output otherwise.
* [nt]roff: A new option, "-x", enables the recognition of extended
  features that may affect compatibility with previous versions. The "-X"
  option disables these features; this is currently the default. Note
  that the features enabled with -x are under development and subject
  to change.
* [nt]roff: With the -x option, it is now possible to use ".de", ".ds",
  ".nr", and similar requests with more than two-character name arguments,
  as in ".de longname", and to access such macros later with ".longname",
  strings with "\*[longname]", and number registers with "\n[longname]".
* [nt]roff: The "\$@" and "\$*" escape sequences to print all arguments
  to a macro are now understood with the -x option.
* troff: The ".ss" command now accepts a second numeric argument with the
  -x option. If it is zero, no second space character is printed between
  sentences. Otherwise, a second space character with the same width as
  the first one is printed.
* [nt]roff: The static block list limit NBLIST has been removed, memory
  is now dynamically allocated as needed.